minor ui alignment fix

--- a/src/app/nav/nav.component.sass
+++ b/src/app/nav/nav.component.sass
@@ -62,6 +62,7 @@ mat-nav-list>a i
   flex-flow: column nowrap
   align-items: center
   justify-content: center
+  text-align: center
   padding: 1em
   background: black
   color: grey
